[package]
name = "file_organizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }    # CLI
walkdir = "2"                                     # recursive traversal
colored = "3.0.0"                                     # colored output
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"                                      # config format
rayon = "1.7"                                     #  parallelism
notify = "8.2.0"                                      #  file watcher

